test/pass/test_binary_pattern.sest
module TestBinaryPattern = struct

  val check(s) =
    case s of
    | "one" -> Some(1)
    | "two" -> Some(2)
    | _     -> None
    end

  val main(_) =
    print_debug({check("one"), check("two"), check("other")})

end
